--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ coverage.xml
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+uptime-kuma/
