--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,22 @@
 services:
+  uptime-kuma:
+    container_name: uptime-kuma
+    image: louislam/uptime-kuma:1.23.16-alpine
+    restart: unless-stopped
+    ports:
+        - 3001:3001
+    volumes:
+        - ./uptime-kuma:/app/data
+        # - /var/opt/uptime-kuma:/app/data
+        - /var/run/docker.sock:/var/run/docker.sock  # même socket que l'hôte docker pour communiquer avec les autres conteneurs
+  
+  nginx:
+      container_name: nginx
+      image: nginx:1.27.4-alpine3.21
+      restart: unless-stopped
+      ports:
+          - 85:85
+  
   php:
     image: ${IMAGES_PREFIX:-}app-php
     restart: unless-stopped
