--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
             jwt: ~
+        api:
+            pattern: ^/api/
+            stateless: true
+            jwt: ~    
     
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
