--- a/.env
+++ b/.env
@@ -53,109 +53,12 @@ CRON_SCHEDULER_BATCH='* */2 * * *'
 AI_MODEL='deepseek-r1-distill-qwen-7b'
 FRONTEND_BASE_URL=https://localhost
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+###> grafana config via zorglux ###
+GRAFANA_USER='your_id'
+GRAFANA_TOKEN='your_token'
+GRAFANA_URL=https://prometheus-prod-24-prod-eu-west-2.grafana.net/api/prom/push
+###> ###
+
+###> artprima/prometheus-metrics-bundle ###
+PROM_METRICS_DSN=apcu
+###< artprima/prometheus-metrics-bundle ###
