--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ext-iconv": "*",
         "api-platform/doctrine-orm": "^4.1.7",
         "api-platform/symfony": "^4.1.7",
+        "artprima/prometheus-metrics-bundle": "^1.19",
         "doctrine/dbal": "^3.9.4",
         "doctrine/doctrine-bundle": "^2.14.0",
         "doctrine/doctrine-migrations-bundle": "^3.4.1",
@@ -27,8 +28,8 @@
         "symfony/expression-language": "7.2.*",
         "symfony/flex": "^2.5.0",
         "symfony/framework-bundle": "7.2.*",
-        "symfony/mailer": "7.2.*",
         "symfony/http-client": "7.2.*",
+        "symfony/mailer": "7.2.*",
         "symfony/messenger": "7.2.*",
         "symfony/property-access": "7.2.*",
         "symfony/property-info": "7.2.*",
